# AdaptiveFluidCohomology

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  imgui.ini
eider/: AdaptiveFluidSolver.cpp  AdaptiveFluidSolver.h  AdaptiveHomologyBasis.cpp  AdaptiveHomologyBasis.h  CMakeLists.txt  Stopwatch.cpp  Stopwatch.h  afem.cpp  afem.h  cfd.cpp  cfd.h  homology.cpp  homology.h  homotopy.cpp  homotopy.h  poisson.cpp  poisson.h  refine.cpp  refine.h  singular_homology.cpp  singular_homology.h  tensor.h  transfer.cpp  transfer.h  truthy_iterator.h  util.h
results/: make_figures.py
results/run_tc1/data/: AI-measurements.csv  AIdopri5.csv  AR-measurements.csv  OR-measurements.csv  nfaces.csv  total_time.csv
results/run_tc13/: config.csv
results/run_tc13/data/: AI-measurements.csv  AR-measurements.csv  ARdoerfler.csv  OR-measurements.csv  nfaces.csv  total_time.csv
results/run_tc14/: config.csv
results/run_tc14/data/: ASAT-measurements.csv  ASATIH-measurements.csv  OR-measurements.csv  nfaces.csv  total_time.csv
results/run_tc2/: config.csv
results/run_tc2/data/: OR-measurements.csv  low-measurements.csv  lowdoerfler.csv  nfaces.csv  total_time.csv  vhigh-measurements.csv
results/run_tc3.1/: config.csv
results/run_tc3.1/data/: AR-measurements.csv  ARdopri5.csv  UN-measurements.csv  nfaces.csv  total_time.csv
results/run_tc3.2/: config.csv
results/run_tc3.2/data/: AI-measurements.csv  AIdoerfler.csv  nfaces.csv  total_time.csv
results/run_tc4/: config.csv
results/run_tc4/data/: nfaces.csv  pattern-measurements.csv  random-measurements.csv  randomdopri5.csv  total_time.csv
results/run_tc5/: config.csv
results/run_tc5/data/: Original-measurements.csv  nfaces.csv  total_time.csv
results/run_tc6/: config.csv
results/run_tc6/data/: constant-measurements.csv  dynamic-measurements.csv  dynamicdopri5.csv  nfaces.csv  total_time.csv
results/run_tc7/data/: ASAT-measurements.csv  ASATIH-measurements.csv  OR-measurements.csv  ORdoerfler.csv  colormap.csv  nfaces.csv  total_time.csv
test/: CMakeLists.txt  Evaluator.cpp  Evaluator.h  Stopwatch.cpp  Stopwatch.h  TaylorInitializer.cpp  TaylorInitializer.h  afemTest.cpp  cfdTest.cpp  create_flamegraph.sh  evaluation.cpp  homologyTest.cpp  main.cpp  poissonTest.cpp  refineTest.cpp  tensorTest.cpp  testutil.cpp  testutil.h  transferTest.cpp  utilTest.cpp  videoGenerators.cpp
test/models/: 4_torus.stl  4_torus_alt.stl  L.stl  L_coarse.stl  L_fine.stl  band.stl  cheese_13_holes_center.stl  cheese_16_holes.stl  cheese_min.stl  cheese_oriented.stl  cylinder-min.stl  cylinder.stl  disk.stl  grid.stl  grid_fine.stl  grid_hole.blend  grid_hole.stl  halftorus.stl  nvb-coarsening.stl  nvb.stl  prism.stl  punctured_disk.stl  torus-base.stl  torus.mtl  torus.stl  torus_bounded.blend  torus_bounded.blend1  torus_bounded.stl  torus_bounded_max.stl  torus_bounded_min.stl  torus_deformed.stl  torus_min.stl  torus_with_holes.stl  triangle.stl  two_torus.stl
